<resources>
    <string name="app_name">WKChart</string>
    <string name="wk_indicators">指标</string>
    <string name="wk_macd">MACD</string>
    <string name="wk_rsi">RSI</string>
    <string name="wk_kdj">KDJ</string>
    <string name="wk_bull">BULL</string>
    <string name="wk_wr">WR</string>

    <string name="wk_time_line">line</string>
    <string name="wk_1m">1m</string>
    <string name="wk_5m">5m</string>
    <string name="wk_15m">15m</string>
    <string name="wk_1h">1h</string>
    <string name="wk_6h">6h</string>
    <string name="wk_1d">1d</string>

    <string name="wk_historical_data">HISTORICAL DATA SHOW</string>
    <string name="wk_real_time_data">REAL TIME DATA SHOW</string>
    <string name="wk_loading_tips">DATA LOADING ...</string>
</resources>
