<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <com.wk.demo.view.XRadioGroup
        android:id="@+id/tab_layout"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginBottom="22dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/btn_direction"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/icon_full_screen" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.wk.demo.view.FontRadioButton
                android:id="@+id/rb_time_line"
                android:layout_width="@dimen/chart_tab_width_size"
                android:layout_height="@dimen/chart_tab_height_size"
                android:background="@drawable/chart_data_type_bg_selected"
                android:button="@null"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/wk_time_line"
                android:textColor="@drawable/chart_data_type_text_selected"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.wk.demo.view.FontRadioButton
                android:id="@+id/rb_one_minute"
                android:layout_width="@dimen/chart_tab_width_size"
                android:layout_height="@dimen/chart_tab_height_size"
                android:background="@drawable/chart_data_type_bg_selected"
                android:button="@null"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/wk_1m"
                android:textColor="@drawable/chart_data_type_text_selected"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.wk.demo.view.FontRadioButton
                android:id="@+id/rb_five_minute"
                android:layout_width="@dimen/chart_tab_width_size"
                android:layout_height="@dimen/chart_tab_height_size"
                android:background="@drawable/chart_data_type_bg_selected"
                android:button="@null"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/wk_5m"
                android:textColor="@drawable/chart_data_type_text_selected"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.wk.demo.view.FontRadioButton
                android:id="@+id/rb_fifteen_minute"
                android:layout_width="@dimen/chart_tab_width_size"
                android:layout_height="@dimen/chart_tab_height_size"
                android:background="@drawable/chart_data_type_bg_selected"
                android:button="@null"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/wk_15m"
                android:textColor="@drawable/chart_data_type_text_selected"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.wk.demo.view.FontRadioButton
                android:id="@+id/rb_one_hour"
                android:layout_width="@dimen/chart_tab_width_size"
                android:layout_height="@dimen/chart_tab_height_size"
                android:background="@drawable/chart_data_type_bg_selected"
                android:button="@null"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/wk_1h"
                android:textColor="@drawable/chart_data_type_text_selected"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.wk.demo.view.FontRadioButton
                android:id="@+id/rb_six_hour"
                android:layout_width="@dimen/chart_tab_width_size"
                android:layout_height="@dimen/chart_tab_height_size"
                android:background="@drawable/chart_data_type_bg_selected"
                android:button="@null"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/wk_6h"
                android:textColor="@drawable/chart_data_type_text_selected"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.wk.demo.view.FontRadioButton
                android:id="@+id/rb_one_day"
                android:layout_width="@dimen/chart_tab_width_size"
                android:layout_height="@dimen/chart_tab_height_size"
                android:background="@drawable/chart_data_type_bg_selected"
                android:button="@null"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/wk_1d"
                android:textColor="@drawable/chart_data_type_text_selected"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.wk.demo.view.FontCheckBox
                android:id="@+id/folding_menu_btn"
                android:layout_width="@dimen/chart_tab_width_size"
                android:layout_height="@dimen/chart_tab_height_size"
                android:background="@drawable/chart_data_type_bg_selected"
                android:button="@null"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/wk_indicators"
                android:textColor="@drawable/chart_data_type_text_selected"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.wk.demo.view.XRadioGroup>

    <View
        android:id="@+id/space_line"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_toStartOf="@+id/tab_layout"
        android:background="@android:color/black" />

    <com.wk.chart.ChartLayout
        android:id="@+id/chart_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/space_line"
        android:background="@android:color/black">

        <com.wk.chart.ChartView
            android:id="@+id/candle_chart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#202a33"
            app:axisLabelTBMargin="8dp"
            app:lineWidth="1dp"
            app:borderWidth="1dp"
            app:decreasingStyle="fill"
            app:gridCount="4"
            app:gridLineState="true"
            app:axisLabelLocation="right"
            app:increasingStyle="fill"
            app:layout_constraintBottom_toTopOf="@+id/depth_chart"
            app:layout_constraintLeft_toLeftOf="@+id/chart_layout"
            app:layout_constraintRight_toRightOf="@+id/chart_layout"
            app:layout_constraintTop_toTopOf="@+id/chart_layout"
            app:layout_constraintVertical_weight="2"
            app:markerBorderLRPadding="10dp"
            app:markerBorderRadius="2dp"
            app:markerBorderTBPadding="3dp"
            app:markerStyle="fill_and_stroke"
            app:markerTextSize="7sp"
            app:renderModel="candle"
            app:selectorMarginY="19dp"
            app:viewInterval="10dp"
            app:xHighlightAutoWidth="true" />

        <ProgressBar
            android:id="@+id/candle_loading_bar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/candle_chart"
            app:layout_constraintTop_toTopOf="@+id/candle_chart" />

        <com.wk.chart.ChartView
            android:id="@+id/depth_chart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="#202a33"
            app:axisLabelTBMargin="8dp"
            app:lineWidth="1dp"
            app:borderWidth="0dp"
            app:decreasingStyle="fill"
            app:gridLineState="true"
            app:axisLabelLocation="all"
            app:layout_constraintBottom_toBottomOf="@+id/chart_layout"
            app:layout_constraintLeft_toLeftOf="@+id/chart_layout"
            app:layout_constraintRight_toRightOf="@+id/chart_layout"
            app:layout_constraintTop_toBottomOf="@+id/candle_chart"
            app:layout_constraintVertical_weight="1"
            app:renderModel="depth"
            app:selectorMarginY="19dp"
            app:viewInterval="0dp" />

        <ProgressBar
            android:id="@+id/depth_loading_bar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/depth_chart"
            app:layout_constraintTop_toTopOf="@+id/depth_chart" />
    </com.wk.chart.ChartLayout>

    <com.wk.demo.view.XRadioGroup
        android:id="@+id/folding_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginBottom="22dp"
        android:layout_toStartOf="@+id/tab_layout"
        android:background="@color/chart_background"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.wk.demo.view.FontRadioButton
                android:id="@+id/macd_btn"
                android:layout_width="@dimen/chart_tab_width_size"
                android:layout_height="@dimen/chart_tab_height_size"
                android:background="@drawable/chart_data_type_bg_selected"
                android:button="@null"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/wk_macd"
                android:textColor="@drawable/chart_data_type_text_selected"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.wk.demo.view.FontRadioButton
                android:id="@+id/rsi_btn"
                android:layout_width="@dimen/chart_tab_width_size"
                android:layout_height="@dimen/chart_tab_height_size"
                android:background="@drawable/chart_data_type_bg_selected"
                android:button="@null"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/wk_rsi"
                android:textColor="@drawable/chart_data_type_text_selected"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.wk.demo.view.FontRadioButton
                android:id="@+id/kdj_btn"
                android:layout_width="@dimen/chart_tab_width_size"
                android:layout_height="@dimen/chart_tab_height_size"
                android:background="@drawable/chart_data_type_bg_selected"
                android:button="@null"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/wk_kdj"
                android:textColor="@drawable/chart_data_type_text_selected"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.wk.demo.view.FontRadioButton
                android:id="@+id/boll_btn"
                android:layout_width="@dimen/chart_tab_width_size"
                android:layout_height="@dimen/chart_tab_height_size"
                android:background="@drawable/chart_data_type_bg_selected"
                android:button="@null"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/wk_bull"
                android:textColor="@drawable/chart_data_type_text_selected"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.wk.demo.view.XRadioGroup>
</RelativeLayout>